add skill section

--- a/html basic/index.html
+++ b/html basic/index.html
@@ -17,4 +17,13 @@
 <hr/>
 </div>
 <!-- contact detail -->
- 
+<!-- skill section -->
+ <div align="center">
+ <h2>SKILL</h2>
+ <div>
+ <P>React  |  Node|  Express | JavaScript | Html 5 | Css 3 | MongoDB</P>
+</div>
+ </div>
+ <br/>
+ <hr/>
+ <!-- skill section -->
