add project skills

--- a/html basic/index.html
+++ b/html basic/index.html
@@ -19,11 +19,41 @@
 <!-- contact detail -->
 <!-- skill section -->
  <div align="center">
- <h2>SKILL</h2>
+ <h2>
+    <u>SKILL</u>
+ </h2>
  <div>
- <P>React  |  Node|  Express | JavaScript | Html 5 | Css 3 | MongoDB</P>
+ <P>React  |  Node|  Express | JavaScript | Html<SUP>5</SUP> | Css <SUB>3</SUB> | MongoDB</P>
 </div>
- </div>
- <br/>
+<br/>
  <hr/>
+ </div>
+ 
  <!-- skill section -->
+<div>
+    <h2 align="center">PROJECTS</h2>
+    <div>
+        <h3>Project title</h3>
+        <hr/>
+        <div>
+            <a href="#">Live Url</a>
+            <a href="#">GitHub Url Url</a>
+        </div>
+        <p>
+            a website dfghjgv dfghjk fghjk dfghjki dfghnjkhg dfghjuhb
+            c njhgfc dfghjokijhb fghjkl iuy cvbnmkmnb
+            sdfghjkijdfghj
+            dfghjkm dfghjl ojhgfvbn 
+        </p>
+        <h4>Technologies used</h4>
+        <p>HTML  | CSS | JAVASCRIPT  </p>
+        <ul type="circle">
+            <li>
+                ui was used fhfghjk rtyui ghjk fghjk
+            </li>
+            <li>
+                ui was not hefdujhgghj fghjkj dfghjk iuhygf
+            </li>
+        </ul>
+    </div>
+</div>
